# mobile_lotw

./: .flake8  .gitignore  .prettierrc  INSTALL.md  README.md  app.py  dependencies.py  env.py  example.env  init_db.py  lotw.py  main.py  middleware.py  notifier.py  opt_dev_requirements.txt  pyproject.toml  requirements.txt  settings.py  setup.bat  setup.sh  start_development_server.bat  start_development_server.sh  test.ipynb  utilities.py
.github/: dependabot.yml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 20260212_01_add_lotw_health_columns.py  20260213_02_billing_sync_indexes.py  20260214_03_qsl_digest_notification_foundation.py  20260215_04_notification_email_preferences.py
app/: __init__.py  background_jobs.py  cache.py  lotw.py  regex_cache.py  urls.py  utils.py
app/blueprints/: __init__.py  (+2 more)
database/: __init__.py  queries.py
docs/: qsl_digest_notifications_plan.md  setup.md
lotw/: __init__.py  auth.py  awards.py  qsls.py  util.py
notification/: email.py
routers/: auth.py  awards.py  qsos.py
scripts/: run_digest_cycle.py
src/: input.css
static/: output.css  style.css
templates/: about.html  award.html  award_details.html  dxcc.html  find.html  footer.html  generic_award.html  home.html  index.html  login.html  navbar.html  privacy.html  qsl.html  qsl_details.html  qsls.html  qsos.html  register.html  triple.html
tests/: test_auth_integration.py  test_billing_checkout_plans.py  test_digest_eligibility.py  test_digest_notifications.py  test_digest_routes_api.py  test_qsl_digest_service.py  test_qso_deduping.py
(+110 files in other folders)
